<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.savor.operation.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="小热点运维端"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/account"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/code"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_solid_corner_red"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/pb_loading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:indeterminateDrawable="@drawable/base_loading_large_anim"
        android:indeterminateBehavior="repeat"/>
</RelativeLayout>
