<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.savor.operation.activity.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:hint="@string/search_hotel"
                android:id="@+id/tv_search"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="40dp"
                android:layout_below="@id/tv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_fix_history"
                    android:text="  维修记录"
                    android:layout_marginRight="20dp"
                    android:drawableTop="@drawable/weixiu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_exception_report"
                    android:layout_marginLeft="20dp"
                    android:text=" 异常报告"
                    android:drawableTop="@drawable/yichang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_edittext"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerInParent="true"
                    android:text="小热点最新状态"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_refresh"
                    android:layout_margin="5dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_refresh_arraw"
                    android:padding="5dp"
                    android:text="@string/refresh"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/color_575757"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlv_info"
                android:layout_marginLeft="15dp"
                android:dividerHeight="10dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_reamrk"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                tools:text="注：异常为心跳失联超过15小时"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/color_575757"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_username"
            android:layout_centerVertical="true"
            android:text="登录账号："
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_exit"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/exit"
            android:background="@drawable/bg_solid_corner_red"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/tv_version"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            tools:text="运维端"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
